--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
  
  
- <div class="this my-container">
+ <div class="container my-container">
   <div class="row my-row">
   <div class="col-md-4 col-sm-6 my-col r1c1">Row1 col1 </div>
   <div class="col-md-8 col-sm-6 my-col r1c2">Row1 col2 </div>
